# internal/dto/authDto.go
@@ -1,0 +1,6 @@
+package dto
+
+type LoginUserDto struct {
+	Email    string `json:"email" validate:"required,email"`
+	Password string `json:"password" validate:"required,min=6"`
+}
